# OpenFanController

./: .gitignore  .pre-commit-config.yaml  .skjoldignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci_docs.yaml  docker_image.yaml  pylint.yaml  stale.yaml
Documentation/: README.md
Documentation/src/: mkdocs.yml  pyproject.toml  requirements.txt
Documentation/src/docs/: api.md  index.md
Firmware/: README.md
Firmware/src/Application/: board.h  emc230x.c  emc230x.h  fan_control.c  fan_control.h  host_communication.c  host_communication.h  usb_cdc.c  usb_cdc.h
Software/: README.md  start.sh
Software/Python/: FanCommander.py  base_logger.py  config.py  config.yaml  pyproject.toml  requirements.txt  serial_driver.py  webserver.py
Software/Python/api/: FanCommander.py  config.py  serial_driver.py  webserver.py
Software/Python/webpage/: index.html
Software/Python/webpage/assets/css/: demo.min.css  demo.rtl.css  demo.rtl.min.css  tabler-flags.rtl.min.css  tabler-payments.rtl.min.css  tabler-social.rtl.css  tabler-vendors.css  tabler-vendors.min.css  tabler-vendors.rtl.css  tabler-vendors.rtl.min.css  tabler.rtl.css  tabler.rtl.min.css
Software/Python/webpage/assets/js/: demo.min.js  kr_gui_fan_status.js  kr_gui_root.js  tabler.esm.min.js  tabler.min.js
Software/Python/webpage/views/: footer.html  header.html
