[tool.poetry]
name = "OpenFanControl"
version = "0.1.0"
description = ""
authors = ["Sasa Karanovic <sasa@karanovic.ca>", "Janne Enberg <janne.enberg@lietu.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.skjold]
report_only = false
sources = ["pyup", "gemnasium"]
