[tool.poetry]
name = "openfancontroller"
version = "0.1.0"
description = "API for OpenFanController"
authors = ["Sasa Karanovic <sasa@karanovic.ca>", "Janne Enberg <janne.enberg@lietu.net>"]
license = "GPLv3"
readme = []
packages = [{"include" = "api"}]

[tool.poetry.dependencies]
python = "^3.9"
tornado = "^6.3.3"
argparse = "^1.4.0"
pyserial = "^3.5"
"ruamel.yaml" = "^0.17.21"
"ruamel.yaml.clib" = "^0.2.7"

[tool.poetry.scripts]
serve = "api.webserver:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
